--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -11,3 +11,29 @@
     height: 130px;
 
 }
+
+.links {
+    color: rgba(108, 41, 70, 255);
+    border-radius: none;
+    border: none;
+    background: none;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    border-bottom: 3px solid white;
+
+}
+
+.links:hover {
+    border-bottom: 3px solid #6d2946e9;
+}
+
+.shedule-button {
+    border-radius: 12px;
+    padding: 15px 18px;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    background-color: rgba(57, 12, 20, 255);
+    color: rgba(255, 254, 245, 255)
+}
