--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -147,35 +147,6 @@
 
 }
 
-
-.header {
-    background-color: #fffef5;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 40px;
-    padding: 10px 100px;
-    flex-wrap: wrap;
-    position: sticky;
-    top: 0;
-    height: 130px;
-    z-index: 1000;
-
-}
-
-
-
-.links {
-    color: rgba(108, 41, 70, 255);
-    border-radius: none;
-    border: none;
-    background: none;
-    font-size: 20px;
-    font-weight: 500;
-    cursor: pointer;
-
-}
-
 .link-container {
     display: flex;
     justify-content: space-evenly;
@@ -183,15 +154,7 @@
     flex-wrap: wrap;
 }
 
-.shedule-button {
-    border-radius: 12px;
-    padding: 15px 18px;
-    font-size: 17px;
-    font-weight: 500;
-    border: none;
-    background-color: rgba(57, 12, 20, 255);
-    color: rgba(255, 254, 245, 255)
-}
+
 
 
 .last-portion {
@@ -215,7 +178,7 @@
     display: flex;
     align-items: flex-start;
     gap: 50px;
-    justify-content: center;
+    justify-content: space-evenly;
     color: #732d4d;
     font-size: 18px;
     font-weight: 500;
@@ -228,11 +191,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
     gap: 10px;
     text-align: center;
     background-color: #f6f6f6;
-    width: 100px;
+    width: 260px;
     height: 100px;
     border-radius: 10px;
     padding: 20px;
@@ -251,6 +213,6 @@ scale: 1.1;
 
 .thing p {
  font-weight: 600;
- font-size: 14px;
+ font-size: 18px;
  width: 100%;
 }
