--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -5,11 +5,42 @@
     justify-content: space-between;
     gap: 40px;
     padding: 10px 100px;
-    flex-wrap: wrap;
     position: sticky;
     top: 0;
     height: 130px;
+    z-index: 200;
 
+    @media (max-width : 578px) {
+        padding: 30px;
+        height: 50px;
+    }
+
+}
+
+.logo {
+
+    border-radius: 5px;
+    width: 130px;
+    padding: 10px;
+    cursor: pointer;
+
+    @media (max-width : 578px) {
+       width: 90px;
+    }
+}
+
+.logo:hover {
+    opacity: 0.8;
+}
+
+.link-container {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 25px;
+
+    @media(max-width : 1084px) {
+        display: none;
+    }
 }
 
 .links {
@@ -25,7 +56,8 @@
 }
 
 .links:hover {
-    border-bottom: 3px solid #6d2946e9;
+    border-bottom: 3px solid gray;
+    color: gray;
 }
 
 .shedule-button {
@@ -35,5 +67,83 @@
     font-weight: 600;
     border: none;
     background-color: rgba(57, 12, 20, 255);
-    color: rgba(255, 254, 245, 255)
+    color: rgba(255, 254, 245, 255);
+    transition: 0.35s all ease;
+
+    @media(max-width : 1084px) {
+        display: none;
+    }
+}
+
+.shedule-button:hover {
+    color: #6d2946;
+    background-color: #fffef5;
+    scale: 1.1;
+}
+
+.hamburgerMenu {
+    display: none;
+
+    >svg {
+        font-size: 37px;
+        color: #6d2946;
+        cursor: pointer;
+    }
+
+    @media (max-width: 1084px) {
+        display: flex;
+    }
+}
+
+.hamMenu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    font-size: 20px;
+    font-weight: 600;
+    background-color: #6d2946;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 20px;
+    width: 250px;
+    height: 300px;
+    border-radius: 0 0 0 30px;
+
+    @media (max-width : 578px) {
+        width: 100%;
+        align-items: center;
+        padding: 0;
+        border-radius: 0;
+        padding-top: 10px;
+        font-size: 18px;
+    }
+
+    .menulinks {
+        text-decoration: none;
+        color: white;
+    }
+
+    .shedule-button-menu {
+        background-color: white;
+        color: #6d2946;
+        padding: 10px;
+        border-radius: 10px;
+        font-size: 17px;
+    }
+
+
+    .close {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        font-size: 24px;
+        color: white;
+
+        @media (max-width : 578px) {
+            top: 20px;
+            left: 18px;
+        }
+    }
 }
