--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,5 +1,4 @@
 footer {
-  margin-bottom: 40px;
   position: relative;
   display: flex;
   align-items: center;
@@ -14,8 +13,6 @@ footer .background {
   object-fit: cover;
   object-position: top;
   opacity: 0.2;
-
-
 
 }
 
@@ -32,6 +29,11 @@ footer .background {
   width: 180px;
   height: 180px;
   object-fit: contain;
+
+  @media (max-width : 576px) {
+    width: 130px;
+    height: 130px;
+  }
 }
 
 .communicate {
@@ -46,6 +48,7 @@ footer .background {
     flex-direction: column;
     align-items: center;
     gap: 20px;
+  top: 244px;
   }
 }
 
@@ -60,7 +63,7 @@ footer .background {
   color: #6d2946;
 
   @media (max-width : 576px) {
-    font-size: 18px;
+    font-size: 15px;
   }
 }
 
@@ -93,13 +96,20 @@ footer .background {
   position: absolute;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   top: 500px;
   width: 80%;
   padding: 40px;
 
   @media (max-width : 1084px) {
     border: none;
+  }
+
+  @media (max-width : 576px) {
+    font-size: 10px;
+    width: 100%;
+    padding: 0;
+    margin-top: 30px;
   }
 }
 
