--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -24,7 +24,7 @@
         flex-direction: column;
         align-items: center;
         flex-direction: column-reverse;
-       padding: 30px;
+        padding: 30px;
 
     }
 
@@ -92,15 +92,20 @@
 
 .about-section p {
     margin-bottom: 40px;
-
+    text-align: justify;
     @media (max-width : 578px) {
-        font-size: 20px;
+        font-size: 18px;
     }
 
 }
 
 .about-section h3 {
     margin-bottom: 10px;
+
+    @media (max-width : 576px) {
+
+        font-size: 20px;
+    }
 
 }
 
@@ -111,7 +116,7 @@
 
     @media (max-width : 576px) {
 
-        font-size: 35px;
+        font-size: 24px;
     }
 }
 
@@ -192,11 +197,27 @@
 }
 
 .our-services {
+    font-size: 22px;
+    background-color: #fff;
+    width: max-content;
+    padding: 10px 20px;
+    border-radius: 50px;
+    color: #732d4d;
+    border: 1px solid white;
+    transition: 0.35s all ease;
+
+    &:hover {
+        background-color: #732d4d;
+        color: white;
+    }
+
     @media (max-width : 576px) {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        align-self: center;
+        font-size: 17px;
     }
 }
 
@@ -248,7 +269,7 @@
 
     @media (max-width : 576px) {
 
-        font-size: 35px;
+        font-size: 24px;
     }
 
 }
