--- a/client/src/Components/ContactBtn/Contact.scss
+++ b/client/src/Components/ContactBtn/Contact.scss
@@ -12,6 +12,7 @@
     z-index: 100;
     border-radius: 50%;
     margin: 10px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 
     svg{
         color: white;
