--- a/client/src/pages/ContactUs/Contact.css
+++ b/client/src/pages/ContactUs/Contact.css
@@ -1,5 +1,5 @@
 .container {
-    padding: 100px 100px;
+    padding: 100px;
     display: flex;
     flex-direction: row;
     gap: 140px;
@@ -13,9 +13,10 @@
 
 
 .upper-text {
-    font-size: 30px;
+    font-size: 24px;
     font-weight: 700;
     color: #6d2946;
+    padding: 10px;
 }
 
 
@@ -28,20 +29,17 @@
 
 input[type="text"] {
     border: none;
-    padding: 10px;
-    width: 220px;
+    padding: 10px 20px;
     border-radius: 10px;
-    box-shadow: 0 3px 6px gray;
 
 }
 
-
-
-
+input {
+    box-shadow: 0 3px 6px gray;
+}
 
 input[type="text"]:focus {
     outline: none;
-    box-shadow: 0 3px 6px #390c14;
 
 }
 
@@ -57,15 +55,12 @@ input[type="text"]::placeholder {
 
 input[type="email"] {
     border: none;
-    padding: 10px;
-    width: 220px;
+    padding: 10px 20px;
     border-radius: 10px;
-    box-shadow: 0 3px 6px gray;
 }
 
 input[type="email"]:focus {
     outline: none;
-    box-shadow: 0 3px 6px #390c14;
 }
 
 .email {
@@ -79,15 +74,12 @@ input[type="email"]::placeholder {
 
 input[type="tel"] {
     border: none;
-    padding: 10px;
-    width: 220px;
+    padding: 10px 20px;
     border-radius: 10px;
-    box-shadow: 0 3px 6px gray;
 }
 
 input[type="tel"]:focus {
     outline: none;
-    box-shadow: 0 3px 6px #390c14;
 }
 
 .phone {
@@ -99,23 +91,23 @@ input[type="tel"]::placeholder {
     color: #6d2946;
 }
 
-.section4 {
-    position: relative;
 
-}
 
 .msg {
-    resize: none;
     border: none;
-    padding: 10px;
+    padding: 8px;
     border-radius: 10px;
+    resize: none;
+    outline: none;
     box-shadow: 0 3px 6px gray;
+
 
 }
 
-.msg:focus {
-    outline: none;
-    box-shadow: 0 3px 6px #390c14;
+.msg::placeholder {
+
+    font-size: 16px;
+    color: #6d2946;
 }
 
 .placeholder-text {
@@ -138,7 +130,12 @@ input[type="tel"]::placeholder {
     font-weight: 600;
     box-shadow: 0 1px 2px #6d2946;
     transition: 0.35s ease-in;
+    cursor: pointer;
 
+    &.load {
+        cursor: not-allowed;
+        box-shadow: none;
+    }
 
 }
 
@@ -148,12 +145,19 @@ input[type="tel"]::placeholder {
     background-color: white;
     color: #6d2946;
 
+    &.load {
+        cursor: not-allowed;
+        background-color: #63636369;
+        color: #ffffff;
+    }
+
 }
 
 
 /* contact details */
 
 .contact-details {
+
     background-color: #6d2946;
     padding: 50px;
     display: flex;
@@ -163,7 +167,6 @@ input[type="tel"]::placeholder {
     box-shadow: -7px 7px 10px gray;
     gap: 40px;
     margin-bottom: 40px;
-    min-height: 50vh;
 
     @media (max-width:480px) {
         /* align-items: center; */
@@ -179,7 +182,7 @@ input[type="tel"]::placeholder {
     .itemContainer {
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 40px;
 
         .item {
             display: flex;
@@ -188,6 +191,11 @@ input[type="tel"]::placeholder {
             font-weight: 600;
             gap: 20px;
             color: white;
+
+            @media (max-width:480px) {
+                font-size: 15px;
+                font-weight: 600;
+            }
 
             img {
                 width: 30px;
@@ -206,15 +214,28 @@ input[type="tel"]::placeholder {
             border-radius: 50%;
             align-items: center;
             justify-content: center;
-            width: 20px;
-            height: 20px;
+            width: 27px;
+            height: 27px;
             cursor: pointer;
+            transition: 0.33s ease-in-out;
+
+            @media (max-width:480px) {
+                width: 20px;
+                height: 20px;
+            }
 
             img {
                 width: 100%;
                 height: 100%;
             }
+
+            &:hover {
+                scale: 1.2;
+                background-color: #390c14;
+            }
         }
+
+
     }
 }
 
@@ -255,7 +276,7 @@ input[type="tel"]::placeholder {
         display: flex;
         flex-direction: column;
         gap: 35px;
-        padding: 0px;
+        padding: 0;
     }
 }
 
@@ -271,19 +292,31 @@ input[type="tel"]::placeholder {
 @media screen and (max-width:560px) {
     input[type="text"] {
         width: 95%;
+        border-radius: 5px;
+        padding: 10px 5px;
     }
 
     input[type="email"] {
         width: 95%;
+        border-radius: 5px;
+        padding: 10px 5px;
+
     }
 
     input[type="tel"] {
         width: 95%;
+        border-radius: 5px;
+        padding: 10px 5px;
     }
 
-    textarea {
-        width: 95%;
 
+    .msg {
+        border-radius: 0;
+        padding: 10px 5px;
+        width: 100%;
+        border-radius: 5;
+        padding: 10px 5px;
+        height: 200px;
     }
 
     .banner-right {
@@ -299,7 +332,7 @@ input[type="tel"]::placeholder {
 
     .sections {
         width: 100%;
-        padding: 0;
+        padding: 3px;
 
     }
 
