--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -4,6 +4,14 @@ footer {
   align-items: center;
   flex-direction: column;
   height: 80vh;
+
+  @media (max-width : 576px) {
+    min-height: 90vh;
+  }
+
+     @media (max-width : 1024px) {
+       min-height: 100vh;
+     }
 }
 
 
@@ -48,7 +56,7 @@ footer .background {
     flex-direction: column;
     align-items: center;
     gap: 20px;
-  top: 244px;
+    top: 244px;
   }
 }
 
