--- a/client/src/Components/ServicesComp/ServicesComp.css
+++ b/client/src/Components/ServicesComp/ServicesComp.css
@@ -29,7 +29,7 @@
     @media (max-width : 1084px) {
         flex-direction: column;
         align-items: center;
-        flex-direction: column-reverse;
+        /* flex-direction: column-reverse; */
     }
 }
 
