--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -92,14 +92,22 @@
 
 .about-section p {
     margin-bottom: 40px;
+    font-weight: 600;
+
     @media (max-width : 578px) {
         font-size: 18px;
+    }
+
+    span {
+        color: rgb(57, 12, 20);
+        font-weight: 800;
     }
 
 }
 
 .about-section h3 {
     margin-bottom: 10px;
+    color: rgb(57, 12, 20);
 
     @media (max-width : 576px) {
 
@@ -109,6 +117,7 @@
 }
 
 .h1 {
+    font-style: italic;
     font-size: 45px;
     color: rgba(57, 12, 20, 255);
     margin-bottom: 20px;
@@ -202,12 +211,13 @@
     padding: 10px 20px;
     border-radius: 50px;
     color: #732d4d;
-    border: 1px solid white;
+    /* border: 2px solid white; */
     transition: 0.35s all ease;
-
+    
     &:hover {
-        background-color: #732d4d;
+        background-color: transparent;
         color: white;
+        scale: 1.1;
     }
 
     @media (max-width : 576px) {
@@ -252,7 +262,7 @@
     flex-direction: column;
     align-items: center;
     padding: 20px 100px;
-    background-color: #e2e2e2;
+    background-color: #f6f6f6;
 
     @media (max-width : 576px) {
         padding: 30px;
@@ -285,17 +295,18 @@
     width: 100%;
 
 
+
 }
 
 
 .thing {
     padding: 10px;
+    background-color: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
     text-align: center;
-    background-color: #f6f6f6;
     width: 260px;
     height: 100px;
     border-radius: 10px;
@@ -303,6 +314,7 @@
     margin-bottom: 30px;
     transition: 0.40s ease;
 
+box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
     @media (max-width : 376px) {
 
         width: 200px;
