--- a/client/src/Components/Boxes/Boxes.scss
+++ b/client/src/Components/Boxes/Boxes.scss
@@ -1,3 +1,6 @@
+$breakpoint1: 956px;
+$breakpoint2: 536px;
+
 .proposalSecThree {
   display: flex;
   flex-direction: column;
@@ -20,6 +23,8 @@
       justify-content: center;
       flex-direction: column;
       gap: 20px;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+        rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
       .imageIcon {
         width: 40px;
@@ -35,6 +40,9 @@
         font-size: 25px;
         font-weight: 600;
         color: #f1f1f1;
+        @media (max-width: $breakpoint2) {
+          font-size: 17px;
+        }
       }
       .desc {
         display: none;
