--- a/client/src/pages/ProposalPage/ProposalPage.scss
+++ b/client/src/pages/ProposalPage/ProposalPage.scss
@@ -1,26 +1,51 @@
+$breakpoint1: 956px;
+$breakpoint2: 536px;
+
 .proposal {
   display: flex;
   flex-direction: column;
   padding: 50px 100px;
   gap: 100px;
+
+  @media (max-width: $breakpoint1) {
+    padding: 50px;
+  }
+  @media (max-width: $breakpoint2) {
+    padding: 20px;
+  }
   h1 {
     font-size: 48px;
     color: rgba(57, 12, 20, 255);
+    @media (max-width: $breakpoint2) {
+      font-size: 22px;
+    }
   }
 
   p {
     font-size: 25px;
     color: #6d2946cc;
+    font-weight: 600;
+    @media (max-width: $breakpoint2) {
+      font-size: 18px;
+    }
   }
   .proposalSecOne {
     display: flex;
     justify-content: space-between;
     gap: 40px;
+    @media (max-width: $breakpoint1) {
+      flex-direction: column;
+      align-items: center;
+      flex-direction: column-reverse;
+    }
     .proposalSecOneleft {
       width: 50%;
       display: flex;
       flex-direction: column;
       gap: 40px;
+      @media (max-width: $breakpoint1) {
+        width: 100%;
+      }
     }
 
     .proposalSecOneRight {
@@ -28,10 +53,15 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      @media (max-width: $breakpoint1) {
+        width: 100%;
+      }
       .image {
         width: 500px;
         height: 480px;
-
+        @media (max-width: $breakpoint2) {
+          height: 300px;
+        }
         > img {
           object-fit: contain;
           width: 100%;
@@ -52,6 +82,9 @@
       h5 {
         font-size: 30px;
         color: #6d2946cc;
+        @media (max-width: $breakpoint2) {
+          font-size: 22px;
+        }
       }
 
       .item {
@@ -66,6 +99,13 @@
         padding: 10px 20px;
         transition: 0.35s ease;
         border-radius: 10px;
+        line-height: 30px;
+        @media (max-width: $breakpoint2) {
+          height: 100%;
+          font-size: 13px;
+        line-height: 20px;
+
+        }
 
         img {
           width: 35px;
@@ -97,6 +137,9 @@
       align-items: center;
       justify-content: center;
       .item {
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+          rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+
         background-color: #f1f1f1;
         padding: 10px 20px;
         width: 350px;
@@ -122,10 +165,16 @@
         .title {
           font-size: 25px;
           font-weight: 600;
+          @media (max-width: $breakpoint2) {
+            font-size: 17px;
+          }
         }
         .desc {
           display: none;
           font-size: 23px;
+           @media (max-width: $breakpoint2) {
+            font-size: 17px;
+          }
         }
 
         &:hover {
@@ -135,9 +184,9 @@
             color: white;
             display: flex;
           }
-         .imageIcon{
-          display: none;  
-         }
+          .imageIcon {
+            display: none;
+          }
           .title {
             display: none;
           }
