--- a/client/src/pages/ProposalTraining/ProposalTraining.scss
+++ b/client/src/pages/ProposalTraining/ProposalTraining.scss
@@ -1,26 +1,50 @@
+$breakpoint1: 1024px;
+$breakpoint2: 536px;
 .proposalTraining {
   display: flex;
   flex-direction: column;
   padding: 50px 100px;
   gap: 100px;
+  @media (max-width: $breakpoint1) {
+    padding: 50px;
+  }
+  @media (max-width: $breakpoint2) {
+    padding: 20px;
+  }
   h1 {
     font-size: 38px;
     color: rgba(57, 12, 20, 255);
+    @media (max-width: $breakpoint2) {
+      font-size: 22px;
+    }
   }
 
   p {
     font-size: 24px;
     color: #6d2946cc;
+    font-weight: 600;
+
+    @media (max-width: $breakpoint2) {
+      font-size: 18px;
+    }
   }
   .trainingSecOne {
     display: flex;
     justify-content: space-between;
     gap: 40px;
+    @media (max-width: $breakpoint1) {
+      flex-direction: column;
+      align-items: center;
+      flex-direction: column-reverse;
+    }
     .left {
       width: 50%;
       display: flex;
       flex-direction: column;
       gap: 20px;
+      @media (max-width: $breakpoint1) {
+        width: 100%;
+      }
     }
 
     .right {
@@ -28,9 +52,15 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      @media (max-width: $breakpoint1) {
+        width: 100%;
+      }
       .image {
         width: 500px;
         height: 480px;
+        @media (max-width: $breakpoint2) {
+          height: 300px;
+        }
 
         > img {
           object-fit: contain;
@@ -44,29 +74,39 @@
     width: 100%;
     display: flex;
     gap: 40px;
-
+    @media (max-width: $breakpoint1) {
+      flex-direction: column;
+      align-items: center;
+    }
     .trainingSecTwoContainer {
       width: 70%;
-
+      @media (max-width: $breakpoint1) {
+        width: 100%;
+      }
       display: flex;
       flex-direction: column;
       gap: 40px;
       .box {
         width: 100%;
-        min-height: 250px;
+        height: 250px;
         border-radius: 20px;
         display: flex;
         flex-direction: column;
         gap: 30px;
         overflow: hidden;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-
+        @media (max-width: $breakpoint2) {
+          height: 100%;
+        }
         .title {
           background-color: #6d2946cc;
           padding: 20px 25px;
           color: white;
           font-size: 18px;
           font-weight: 600;
+          @media (max-width: $breakpoint2) {
+            font-size: 15px;
+          }
         }
         h3 {
           font-size: 23px;
@@ -74,7 +114,7 @@
         ul {
           display: flex;
           flex-direction: column;
-          gap: 30px;
+          gap: 20px;
           padding: 0 20px;
           li {
             list-style: none;
@@ -84,6 +124,11 @@
 
             p {
               font-size: 18px;
+
+              @media (max-width: $breakpoint2) {
+                font-size: 15px;
+                margin-bottom: 10px;
+              }
             }
 
             .icon {
@@ -112,7 +157,14 @@
       display: flex;
       flex-direction: column;
       gap: 50px;
+      @media (max-width: $breakpoint1) {
+        width: 100%;
+        height: 100%;
+      }
 
+      @media (max-width: $breakpoint2) {
+        border: none;
+      }
       ul {
         display: flex;
         flex-direction: column;
@@ -175,25 +227,23 @@
           font-weight: 800;
         }
       }
-
-      
     }
     .enrollBtn {
-        border-radius: 12px;
-        padding: 10px 18px;
-        font-size: 15px;
-        font-weight: 600;
-        border: none;
-        background-color: rgba(57, 12, 20, 255);
-        color: rgba(255, 254, 245, 255);
-        transition: 0.35s all ease;
-        width: 150px;
-      }
+      border-radius: 12px;
+      padding: 10px 18px;
+      font-size: 15px;
+      font-weight: 600;
+      border: none;
+      background-color: rgba(57, 12, 20, 255);
+      color: rgba(255, 254, 245, 255);
+      transition: 0.35s all ease;
+      width: 150px;
+    }
 
-      .enrollBtn:hover {
-        color: #6d2946;
-        background-color: #ffffff;
-        scale: 1.1;
-      }
+    .enrollBtn:hover {
+      color: #6d2946;
+      background-color: #ffffff;
+      scale: 1.1;
+    }
   }
 }
