--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -5,7 +5,10 @@
   margin: 0;
   padding: 0;
   font-family: Be Vietnam Pro, sans-serif;
-  //  font-family: "Poppins", sans-serif;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
 
 a {
