--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -9,9 +9,9 @@ footer {
     min-height: 90vh;
   }
 
-     @media (max-width : 1024px) {
-       min-height: 100vh;
-     }
+  @media (max-width : 1024px) {
+    min-height: 100vh;
+  }
 }
 
 
@@ -62,7 +62,16 @@ footer .background {
 
 .communicate-item {
   display: flex;
+  align-items: center;
   gap: 15px;
+  min-width: 250px;
+
+  @media (max-width : 1084px) {
+  margin-left: 30px;
+  }
+        @media (max-width : 572px) {
+          margin-left: 80px;
+        }
 }
 
 .communicate-item p {
