--- a/client/src/pages/ContactUs/Contact.css
+++ b/client/src/pages/ContactUs/Contact.css
@@ -175,10 +175,15 @@
         box-shadow: -7px 7px 10px gray;
         gap: 40px;
         margin-bottom: 40px;
+        width: 500px;
 
-        @media (max-width:480px) {
+
+        @media (max-width:630px) {
             border-radius: 0;
             box-shadow: none;
+            padding: 20px;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         >h1 {
