--- a/client/src/pages/Clients/Clients.scss
+++ b/client/src/pages/Clients/Clients.scss
@@ -76,21 +76,56 @@
   }
 
   .videoContainer {
-    width: 700px;
-    border-radius: 30px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content:flex-start;
+    margin-top: 20px;
 
     @media (max-width: 875px) {
-      width: 500px;
+      gap: 20px;
     }
-    @media (max-width: 520px) {
+    
+    .video-wrapper {
+      max-width: 500px;
       width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      height: 350px;
+      
+      h3 {
+        margin-bottom: 12px;
+        color: #732d4d;
+        font-weight: 600;
+        text-align: center;
+        height: 30px;
+      }
+      
+      @media (max-width: 430px) {
+        height: 290px;
+      }
     }
+    
     video {
-      border-radius: 30px;
+      max-width: 500px;
       width: 100%;
-      height: 100%;
+      height: 280px;
+      object-fit: cover;
+      border-radius: 16px;
+      box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, 
+                  rgba(0, 0, 0, 0.1) 0px 2px 4px 0px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      
+      &:hover {
+        transform: translateY(-5px);
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+      }
+      
       @media (max-width: 430px) {
         border-radius: 10px;
+        height: 220px;
       }
     }
   }
